--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -1,1 +1,4 @@
+@import "~bootswatch/dist/minty/variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~bootswatch/dist/minty/bootswatch";
 @import "styles";
