import interactions search form

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ div.row, div.card, fieldset {
     margin-bottom: $spacer;
 }
 
-div.row, div.card, fieldset, ul, p, table, .alert {
+div.row, div.form-group, div.card, fieldset, ul, p, table, .alert {
     &:last-child {
         margin-bottom: 0;
     }
