add margin to form

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
     padding-bottom: $spacer * 50;
 }
 
-div.row, div.card, fieldset {
+div.row, div.card, form, fieldset {
     margin-bottom: $spacer;
 }
 
