--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,22 @@ div.row, div.form-group, div.card, form, fieldset, ul, p, table, .alert {
         margin-bottom: 0;
     }
 }
+
+.page-link {
+    border-color: $info;
+    background-color: $info;
+    &:hover {
+        border-color: darken($info, 20%);
+        background-color: darken($info, 20%);
+    }
+}
+
+.page-item.active .page-link {
+    border-color: darken($info, 20%);
+    background-color: darken($info, 20%);
+}
+
+.page-item.disabled .page-link {
+    border-color: lighten($info, 20%);
+    background-color: lighten($info, 20%);
+}
