--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -35,3 +35,10 @@ div.row, div.form-group, div.form-row, div.card, div.alert, div.animation, form,
 .nav-item > a {
     outline-style: none;
 }
+
+td.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 10px;
+}
