--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,7 +11,7 @@ img.logo {
     margin: auto;
 }
 
-@include media-breakpoint-up(md) {
+@include media-breakpoint-up(lg) {
     img.logo {
         width: 60%;
     }
