finally fixed contact link

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -62,3 +62,9 @@ td.ellipsis {
     white-space: nowrap;
     max-width: 10px;
 }
+
+.btn-contact {
+    padding: 0;
+    border: none;
+    background: none;
+}
